login and signup responsiveness

--- a/libs/client/login/feature/src/lib/loginpage/loginpage.component.html
+++ b/libs/client/login/feature/src/lib/loginpage/loginpage.component.html
@@ -7,9 +7,11 @@
   <img mat-card-image src="" alt="Photo of a Shiba Inu">
 </picture> -->
 
-<mat-grid-list cols="1" rows="1" rowHeight="2:1">
+<mat-grid-list cols="1" rowHeight="fit">
 
-    <mat-card>
+    <mat-grid-tile>
+
+      <mat-card>
 
         <mat-card-content>
 
@@ -48,6 +50,8 @@
         </mat-card-content>
 
       </mat-card>
+
+    </mat-grid-tile>
 
 </mat-grid-list>
 
