--- a/libs/client/strava/feature/src/lib/stravalink/stravalink.component.scss
+++ b/libs/client/strava/feature/src/lib/stravalink/stravalink.component.scss
@@ -1,14 +1,34 @@
+mat-grid-list {
+    // max-width: 400px;
+    // width: 90vw;
+    // margin: 2em auto;
+    // margin-top: 8em;
+    // padding: 2em auto;
+    // position: absolute;
+    // top: 100%;
+    // left: 50%;
+    // transform: translate(-50%, -0%);
+    // background-color: rgba(255, 255, 255, 1);
+    height: 100vw;
+    max-height: 80vh;
+    min-height: 600px;
+}
+
+@media (max-width: 300px) {
+    mat-grid-list { 
+        background-color: transparent;
+    }
+}
+
+@media (max-width: 1035px) {
+    mat-grid-list {
+        height: 100vh;
+    }
+}
+
 mat-card {
-    max-width: 400px;
     width: 90vw;
-    margin: 2em auto;
-    margin-top: 8em;
-    padding: 2em auto;
-    position: absolute;
-    top: 100%;
-    left: 50%;
-    transform: translate(-50%, -0%);
-    background-color: rgba(255, 255, 255, 1);
+    max-width: 400px;
 }
 
 mat-spinner {
