--- a/libs/client/settings/feature/src/lib/settings/settings.component.html
+++ b/libs/client/settings/feature/src/lib/settings/settings.component.html
@@ -93,7 +93,7 @@
             </section>
      
             <section>
-                <mat-card routerLink="/login" class="option my-3">
+                <mat-card (click)="logout()" class="option my-3">
                 
                     <mat-grid-list cols="5" rowHeight="2:1">
                         <mat-grid-tile><mat-icon>exit_to_app</mat-icon></mat-grid-tile>
