--- a/libs/client/dashboard/feature/src/lib/dashboard/dashboard.component.html
+++ b/libs/client/dashboard/feature/src/lib/dashboard/dashboard.component.html
@@ -4,11 +4,11 @@
 
         <mat-grid-list cols="1" rows="1" rowHeight="2:1" class="py-12">
 
-            <div id="incomingRequests" class="m-8">
+            <div id="incomingRequests" class="m-8" *ngIf="doneloading">
     
-                <h1 *ngIf="ifPendingRequests()" class="text-center">Buddy Requests</h1>
+                <h1 *ngIf="pendingrequests" class="text-center">Incoming Requests</h1>
                 <ng-container>
-                    <div *ngFor="let usr of requests" class="max-w-md mx-auto bg-white rounded-xl shadow-md overflow-hidden md:max-w-2xl">
+                    <div *ngFor="let usr of requests" class="max-w-md mx-auto bg-white rounded-xl shadow-md overflow-hidden md:max-w-2xl mt-3">
                         <div class="md:flex">
                             <div class="md:shrink-0">
                                 <img class="h-48 w-full object-cover md:h-full md:w-48" src="https://github.com/COS301-SE-2022/Training-Buddy/blob/develop/libs/client/shared/assets/stockImages/5.jpg?raw=true">
@@ -32,7 +32,7 @@
                 
             </div>
 
-            <div id="recBuddies" class="m-8 mt-2">
+            <div id="recBuddies" class="m-8 mt-2" *ngIf="doneloading">
     
                 <h1 class="text-center">Recommended</h1>
 
@@ -47,13 +47,13 @@
                     </mat-select>
                 </mat-form-field>
                 
-                <div id="noresults">
+                <div id="noresults" *ngIf="doneloading">
                     <mat-hint *ngIf="noBuddies" class="text-center">No Buddies</mat-hint>
                     <br />
                     <mat-hint *ngIf="noBuddies" class="text-center">Try another sport or increase your training radius</mat-hint>
                 </div>
 
-                <ng-container>
+                <ng-container *ngIf="doneloading">
 
                     <div *ngFor="let usr of buddies" class="mb-5 max-w-md mx-auto bg-white rounded-xl shadow-md overflow-hidden md:max-w-2xl">
                         <div class="md:flex">
@@ -64,7 +64,7 @@
                                 <div class="acceptTitle">
                                     <p class="block mt-1 text-2xl leading-tight font-medium text-black">{{ usr.userName }} {{ usr.userSurname }}</p> 
                                     <div>
-                                        <button *ngIf="!checkIfInOutgoing(usr.email)" mat-raised-button>Request</button>
+                                        <button *ngIf="!checkIfInOutgoing(usr.email)" (click)="sendRequest(usr.email)" mat-raised-button>Request</button>
                                         <button *ngIf="checkIfInOutgoing(usr.email)" mat-raised-button disabled>Pending</button>
                                     </div>
                                 </div> 
@@ -75,43 +75,7 @@
                             </div>
                         </div>
                     </div>
-                    <!-- <div class="max-w-md mx-auto bg-white rounded-xl shadow-md overflow-hidden md:max-w-2xl mt-3">
-                        <div class="md:flex">
-                            <div class="md:shrink-0">
-                                <img class="h-48 w-full object-cover md:h-full md:w-48" src="https://github.com/COS301-SE-2022/Training-Buddy/blob/develop/libs/client/shared/assets/stockImages/6.jpg?raw=true">
-                            </div>
-                            <div class="mx-4 mb-3 mt-2">
-                                <div class="acceptTitle">
-                                    <p class="block mt-1 text-2xl leading-tight font-medium text-black">Jane Wright</p> 
-                                    <div>
-                                        <button mat-raised-button>Request</button>
-                                    </div>
-                                </div> 
-                                <div class="tracking-wide text-xs font-semibold">Menlyn, Pretoria</div>
-                                <p class="mt-2 text-slate-500">Avid gym junkie - I enjoy powerlifting and a bit of cardio on the odd occasion.</p>
-                                <mat-icon> directions_run</mat-icon>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="max-w-md mx-auto bg-white rounded-xl shadow-md overflow-hidden md:max-w-2xl mt-3">
-                        <div class="md:flex">
-                            <div class="md:shrink-0">
-                                <img class="h-48 w-full object-cover md:h-full md:w-48" src="https://github.com/COS301-SE-2022/Training-Buddy/blob/develop/libs/client/shared/assets/stockImages/3.jpg?raw=true">
-                            </div>
-                            <div class="mx-4 mb-3 mt-2">
-                                <div class="acceptTitle">
-                                    <p class="block mt-1 text-2xl leading-tight font-medium text-black">Taku Muguti</p> 
-                                    <div>
-                                        <button mat-raised-button >Request</button>
-                                    </div>
-                                </div> 
-                                <div class="tracking-wide text-xs font-semibold">Groenkloof, Pretoria</div>
-                                <p class="mt-2 text-slate-500">I'm training for triathlon and need more experience running. Looking for a buddy to do medium-long distance road running with me, especially early morning runs!</p>
-                                <mat-icon> directions_bike</mat-icon>
-                                <mat-icon> directions_run</mat-icon>
-                            </div>
-                        </div>
-                    </div> -->
+
                 </ng-container>
                 
             </div>
