--- a/libs/client/viewprofile/feature/src/lib/viewprofilepage/viewprofilepage.component.html
+++ b/libs/client/viewprofile/feature/src/lib/viewprofilepage/viewprofilepage.component.html
@@ -1,6 +1,6 @@
 <training-buddy-unsigned-navbar></training-buddy-unsigned-navbar>
 
-    <mat-grid-list cols="1" rows="2" rowHeight="2:1" >
+    <mat-grid-list cols="1" rowHeight="fit" class="py-12">
     
         <mat-card id="grid">
     
@@ -13,34 +13,38 @@
                         </div>
                         <div class="mx-4 mb-3 mt-2">
                             <div class="acceptTitle">
-                                <h1 class="block mt-1 text-2xl leading-tight font-medium text-black"> displayUser.userSurname   displayUser.userSurname </h1> 
+                                <h1 class="block mt-1 text-2xl leading-tight font-medium text-black"> {{displayUser.userName}}   {{displayUser.userSurname}} </h1> 
                             </div> 
-                            <div class="tracking-wide text-xs font-semibold"> displayUser.location </div>
-                            <p class="mt-2 text-slate-500"> displayUser.bio </p>
-                            <p class="mt-2 text-slate-500"> getSportString(displayUser) </p>
+                            <div class="tracking-wide text-xs font-semibold"> {{displayUser.location}} </div>
+                            <p class="mt-2 text-slate-500"> {{displayUser.bio}} </p>
+                            <p class="mt-2 text-slate-500"> {{getSportString(displayUser)}} </p>
 
                             
                         </div>
                     </div>
                 </div>
 
-                <div class=" mt-3 ml-3 acceptTitle">
-                    <h2 class="block mt-1 text-2xl leading-tight font-medium text-black">Activity Logs:</h2> 
-                </div>
+                <ng-container *ngIf="showlogs">
 
-                <div *ngFor="let ac of logList" class="max-w-md mx-auto bg-white rounded-xl shadow-md overflow-hidden max-w-2xl mt-3">
-                    <div class="m-3">
-                        <div class="flex justify-around">
-                            <h4><strong>{{ ac.name }}</strong></h4>
-                            <h4>{{ ac.date }}</h4>
-                        </div>
-                        <div class="flex justify-between">
-                            <h4>{{ ac.time }}</h4>
-                            <h4>{{ ac.distance }}</h4>
-                            <h4>{{ ac.speed }}</h4>
+                    <div class="my-3 ml-3 acceptTitle">
+                        <h2 class="block mt-1 text-2xl leading-tight font-medium text-black">Activity Logs:</h2> 
+                    </div>
+    
+                    <div *ngFor="let ac of logList" class="max-w-md mx-auto bg-white rounded-xl shadow-md overflow-hidden max-w-2xl mt-3">
+                        <div class="m-3">
+                            <div class="flex justify-around">
+                                <h4><strong>{{ ac.name }}</strong></h4>
+                                <h4>{{ ac.date }}</h4>
+                            </div>
+                            <div class="flex justify-between">
+                                <h4>{{ ac.time }}</h4>
+                                <h4>{{ ac.distance }}</h4>
+                                <h4>{{ ac.speed }}</h4>
+                            </div>
                         </div>
                     </div>
-                </div>
+
+                </ng-container>
     
             </mat-card-content>
     
@@ -48,5 +52,4 @@
 
     </mat-grid-list>
 
-
-<training-buddy-navbar></training-buddy-navbar>
+<training-buddy-navbar class="navfix"></training-buddy-navbar>
