--- a/libs/client/viewprofile/feature/src/lib/viewprofilepage/viewprofilepage.component.scss
+++ b/libs/client/viewprofile/feature/src/lib/viewprofilepage/viewprofilepage.component.scss
@@ -8,6 +8,7 @@ mat-card {
     left: 50%;
     transform: translate(-50%, -0%);
     background-color: rgba(255, 255, 255, 1);
+    margin-bottom: 150px !important;
 }
 
 .text-center {
@@ -86,4 +87,9 @@ mat-error {
 
 mat-hint {
     text-align: right !important;
+}
+
+p {
+    word-break: break-all;
+    white-space: normal;
 }
