tweaks to flow and edit edit profile form

--- a/libs/client/settings/feature/src/lib/settings/settings.component.html
+++ b/libs/client/settings/feature/src/lib/settings/settings.component.html
@@ -1,6 +1,7 @@
 <!-- <div id="background" [ngStyle]="{'background-image': 'url(' + img + ')'}"> -->
 
-    <training-buddy-unsigned-navbar></training-buddy-unsigned-navbar>
+    <!-- <training-buddy-unsigned-navbar></training-buddy-unsigned-navbar> -->
+    <training-buddy-back-navbar title="Settings"></training-buddy-back-navbar>
     
     <mat-card class="mainCard mt-12">
        
@@ -37,10 +38,10 @@
       
         <mat-card-content>
 
-            <div class="flex">
-                <mat-icon routerLink="/profile" class="flex-none">arrow_back_ios</mat-icon>
-                <div class="flex-auto pr-2"><h1 id="title">Settings</h1></div>
-            </div>
+            <!-- <div class="flex"> -->
+                <!-- <mat-icon routerLink="/profile" class="flex-none">arrow_back_ios</mat-icon> -->
+                <!-- <div class="flex-auto"><h1 id="title">Settings</h1></div> -->
+            <!-- </div> -->
 
             <section>
                 <mat-card routerLink="/editprofile" class="option my-3">
