--- a/libs/client/editprofile/feature/src/lib/editprofilepage/editprofilepage.component.scss
+++ b/libs/client/editprofile/feature/src/lib/editprofilepage/editprofilepage.component.scss
@@ -4,9 +4,9 @@ mat-card {
     margin: 2em auto;
     padding: 2em auto;
     position: absolute;
-    top: 50%;
+    // top: 50%;
     left: 50%;
-    transform: translate(-50%, 8%);
+    transform: translate(-50%, 0%);
     background-color: rgba(255, 255, 255, 1);
 
   }
