--- a/libs/client/settings/feature/src/lib/settings/settings.component.html
+++ b/libs/client/settings/feature/src/lib/settings/settings.component.html
@@ -54,7 +54,7 @@
             </section>
 
             <section>
-                <mat-card routerLink="/configureprofile"   class="option my-3">
+                <mat-card routerLink="/configureprofile/update"   class="option my-3">
                     <mat-grid-list cols="5" rowHeight="2:1">
                         <mat-grid-tile><mat-icon>directions_bike</mat-icon></mat-grid-tile>
                         <mat-grid-tile [colspan]="3">Activity Settings</mat-grid-tile>
