--- a/libs/client/athlete-profile/feature/src/lib/athleteprofile/athleteprofile.component.html
+++ b/libs/client/athlete-profile/feature/src/lib/athleteprofile/athleteprofile.component.html
@@ -42,7 +42,7 @@
                   step="2"
                   min="2"
                   max="50"
-                  aria-label="units"></mat-slider>
+                  aria-label="units" value="{{sliderDefault}}"></mat-slider>
                 </div>
 
                 <div class="content-center">
