--- a/libs/client/settings/feature/src/lib/settings/settings.component.html
+++ b/libs/client/settings/feature/src/lib/settings/settings.component.html
@@ -64,7 +64,7 @@
             </section>
      
             <section>
-                <mat-card routerLink="/#"  class="option my-3">
+                <mat-card routerLink="/changepassword"  class="option my-3">
                     <mat-grid-list cols="5" rowHeight="2:1">
                         <mat-grid-tile> <mat-icon>lock</mat-icon></mat-grid-tile>
                         <mat-grid-tile [colspan]="3">Change Password</mat-grid-tile>
