--- a/libs/client/settings/feature/src/lib/settings/settings.component.scss
+++ b/libs/client/settings/feature/src/lib/settings/settings.component.scss
@@ -10,6 +10,10 @@
     background-color: rgba(255, 255, 255, 1);
 }
 
+section:hover {
+    cursor: pointer;
+}
+
 #background {
     height: 100vh;
     background-size: cover;
