--- a/libs/client/shared/components/navbar/ui/src/lib/navbar/navbar.component.html
+++ b/libs/client/shared/components/navbar/ui/src/lib/navbar/navbar.component.html
@@ -6,7 +6,7 @@
     <!-- <mat-icon (click)="route('/addactivity')">add_circle</mat-icon> -->
     <mat-icon [routerLink]="['/addactivity']">add_circle</mat-icon>
     <!-- <mat-icon (click)="route('/scheduleworkout')">calendar_today</mat-icon> -->
-    <mat-icon [routerLink]="['/scheduleworkout']">calendar_today</mat-icon>
+    <mat-icon [routerLink]="['/schedule']">calendar_today</mat-icon>
     <!-- <mat-icon (click)="route('/profile')">person</mat-icon> -->
     <mat-icon [routerLink]="['/profile']">person</mat-icon>
     <!-- <mat-icon (click)="route('/settings')">settings</mat-icon> -->
