--- a/libs/client/settings/feature/src/lib/settings/settings.component.scss
+++ b/libs/client/settings/feature/src/lib/settings/settings.component.scss
@@ -14,6 +14,10 @@ section:hover {
     cursor: pointer;
 }
 
+.container > section {
+    margin-top: 1.5% !important;
+}
+
 #background {
     height: 100vh;
     background-size: cover;
