Update user ready for image upload with Base64

--- a/libs/client/schedule/feature/src/lib/viewschedule/viewschedule.component.html
+++ b/libs/client/schedule/feature/src/lib/viewschedule/viewschedule.component.html
@@ -3,7 +3,7 @@
 <h1 class="text-center">Schedule here</h1>
 
 <div>
-    <button id="addbutton" [routerLink]="['../scheduleworkout']" mat-fab color="primary">
+    <button id="addbutton" [routerLink]="['../scheduleworkout']" mat-fab>
         <mat-icon>add</mat-icon>
     </button>
 </div>
