--- a/libs/client/editprofile/feature/src/lib/editprofilepage/editprofilepage.component.html
+++ b/libs/client/editprofile/feature/src/lib/editprofilepage/editprofilepage.component.html
@@ -21,10 +21,21 @@
                 </figcaption>
             </figure> -->
             
-           <div class="relative">
-            <img class="w-full" src="https://images.unsplash.com/photo-1512941675424-1c17dabfdddc?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2670&q=80" alt="dummy-image">
-            <button class="absolute bottom-0  right-0 text-white bg-zinc-900 w-10 h-10 rounded-full" ><mat-icon>camera_alt</mat-icon></button>
-          </div>
+            <div class="container">
+            
+              <!-- <img class="w-full" src="{{ currentImage }}" alt="dummy-image"> -->
+              <div  id="fileuploaddiv" class="my-2" [ngStyle]="{'background-image': 'url(' + currentImage + ')'}"></div>
+            
+              <!-- <button class="absolute"><mat-icon>camera_alt</mat-icon></button> -->
+
+              <input id="fileupload" name="fileupload" #fileinput type="file" (change)="fileattatched($event)" accept="image/x-png,image/gif,image/jpeg" hidden>
+
+              <button (click)="fileinput.click()" id="editbutton" class="lowright" mat-fab>
+                <mat-icon>edit</mat-icon>
+              </button>
+          
+            </div>
+          
           <mat-card-content class="mt-3">
         
             <form [formGroup]="updateForm">
