--- a/libs/client/viewprofile/feature/src/lib/viewprofilepage/viewprofilepage.component.html
+++ b/libs/client/viewprofile/feature/src/lib/viewprofilepage/viewprofilepage.component.html
@@ -60,11 +60,27 @@
                         </div>
     
                         <!-- content to the right of the image -->
-                        <div class="statscol row blue">
+                        <div class="statsblock">
                             
-                            <!-- stat col -->
-                            <div>one</div>
+                            <div class="text-center">
+                                <h1>{{ displayUser?.userName }} {{ displayUser?.userSurname }}</h1>
+                                <h3>{{ displayUser?.location }}</h3>
+                            </div>
 
+                            <div class="row statscol">
+
+                                <div>
+                                    <div class="text-center">0</div>
+                                    <div>Buddies</div>
+                                </div>
+
+                                <div>
+                                    <div class="text-center">0</div>
+                                    <div>Activities</div>
+                                </div>
+
+                            </div>
+                            
                         </div>
     
                     </div>
