--- a/libs/client/viewprofile/feature/src/lib/viewprofilepage/viewprofilepage.component.scss
+++ b/libs/client/viewprofile/feature/src/lib/viewprofilepage/viewprofilepage.component.scss
@@ -1,3 +1,18 @@
+mat-spinner {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.spinner ::ng-deep .mat-progress-spinner circle, .mat-spinner circle {
+    stroke: #000000;
+}
+
+.mat-progress-spinner circle, .mat-spinner circle {
+    stroke: #3fb53f;
+}
+
 mat-card {
     max-width: 400px;
     width: 90vw;
