view profile animations

--- a/libs/client/dashboard/feature/src/lib/dashboard/dashboard.component.html
+++ b/libs/client/dashboard/feature/src/lib/dashboard/dashboard.component.html
@@ -49,7 +49,7 @@
                 <div id="noresults" *ngIf="doneloading">
                     <mat-hint *ngIf="noBuddies" class="text-center">No Buddies</mat-hint>
                     <br />
-                    <mat-hint *ngIf="noBuddies" class="text-center">Try another sport or increase your training radius</mat-hint>
+                    <ng-container *ngIf="noBuddies"><mat-hint class="text-center">Try another sport or increase your </mat-hint><a id="configurelink" routerLink="/configureprofile/update"><u>Buddy Distance</u></a></ng-container>
                 </div>
 
                 <ng-container *ngIf="doneloading">
