--- a/libs/client/dashboard/feature/src/lib/dashboard/dashboard.component.scss
+++ b/libs/client/dashboard/feature/src/lib/dashboard/dashboard.component.scss
@@ -3,6 +3,10 @@
     margin-bottom: 8px;
 }
 
+.configurelink {
+    text-decoration: underline !important;
+}
+
 mat-card {
     max-width: 600px;
     width: 90vw;
