--- a/libs/client/viewprofile/feature/src/lib/viewprofilepage/viewprofilepage.component.html
+++ b/libs/client/viewprofile/feature/src/lib/viewprofilepage/viewprofilepage.component.html
@@ -86,9 +86,22 @@
                         </div>
     
                     </div>
+
+                    <div class="row space-around mt-5">
+                        <div class="fullwidth text-center">
+                            <h4 (click)="toggleBuddies()" class="link">Buddies</h4>
+                            <ng-container *ngIf="toggle"><hr class="hrdark" [@swipeLeft] /></ng-container>
+                            <ng-container *ngIf="!toggle"><hr class="hrlight" /></ng-container>
+                        </div>
+                        <div class="fullwidth text-center">
+                            <h4 (click)="toggleLogs()" class="link">Activities</h4>
+                            <ng-container *ngIf="toggle"><hr class="hrlight" /></ng-container>
+                            <ng-container *ngIf="!toggle" ><hr class="hrdark" [@swipeRight]/></ng-container>
+                        </div>
+                    </div>
     
-                    <training-buddy-buddies-list></training-buddy-buddies-list>
-                    <training-buddy-log-list></training-buddy-log-list>
+                    <training-buddy-buddies-list *ngIf="toggle" [@fadeIn]></training-buddy-buddies-list>
+                    <training-buddy-log-list *ngIf="!toggle" [@fadeIn]></training-buddy-log-list>
         
                 </mat-card-content>
         
