--- a/libs/client/viewprofile/feature/src/lib/viewprofilepage/viewprofilepage.component.html
+++ b/libs/client/viewprofile/feature/src/lib/viewprofilepage/viewprofilepage.component.html
@@ -3,7 +3,7 @@
 
     <div *ngIf="loading" class="spinner"><mat-spinner></mat-spinner></div>
 
-    <mat-grid-list *ngIf="!loading" cols="1" rows="1" rowHeight="2:1">
+    <mat-grid-list *ngIf="!loading" [@fadeIn] cols="1" rows="1" rowHeight="2:1">
     
         <!-- <mat-grid-tile> -->
             <mat-card>
